--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           </p>
         </div>
       </header>
-      <section class="rounded-xl bg-white p-8 pt-4 dark:bg-slate-800">
+      <section class="hidden rounded-xl bg-white p-8 pt-4 dark:bg-slate-800">
         <h2 class="text-4xl font-bold text-bear-yellow">Keep in Touch</h2>
         <form class="pt-8">
           <label class="hidden">email</label>
