Add a folder for 2023

--- a/src/index.html
+++ b/src/index.html
@@ -21,16 +21,18 @@
           <div class="flex-1 bg-bear-gray"></div>
           <div class="flex-1 bg-black"></div>
         </div>
-        <div class="p-8 pt-4">
+        <div class="">
           <h1
-            class="bg-gradient-to-b from-gray-200 via-bear-brown to-bear-orange bg-clip-text text-6xl font-bold text-transparent dark:from-bear-yellow dark:via-bear-yellow dark:to-white"
+            class="bg-gradient-to-b from-gray-200 via-bear-brown to-bear-orange bg-clip-text py-2 text-center text-xl font-bold text-transparent dark:from-bear-yellow dark:via-bear-yellow dark:to-white md:text-left"
           >
             Deep Creek Bears
           </h1>
-          <p class="mt-4 text-xl">Save the date</p>
-          <p class="block text-2xl font-semibold">
-            Oct 26, 2023 - Oct 30, 2023
-          </p>
+          <div class="my-4 border-y-2 border-bear-orange bg-bear-yellow py-4">
+            <p class="text-md text-center">Save the date</p>
+            <p class="block text-center text-xl font-semibold">
+              Oct 26 - 30 2023
+            </p>
+          </div>
         </div>
       </header>
       <section class="hidden rounded-xl bg-white p-8 pt-4 dark:bg-slate-800">
