--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body>
+	<body class="bg-cloud-burst">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
